add new paragraph

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Welcome</h1>
     <p>This is feature 1 dropdown</p>
     <p>This is feature 1 button</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit rem adipisci repudiandae quod. Quas blanditiis saepe quos numquam sit magni veniam odit pariatur sed! Illo sed expedita praesentium totam cupiditate!</p>
 </body>
 </html>
